Sort of fix cite overflow problem

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -3,6 +3,9 @@
 // 自定义样式
 // ==============================
 
+
+.container {overflow: hidden;}
+  
 .wrap-around {
     display: inline-block;
     width: 100%;
